--- a/LocationTracking/LocationTracking/Base.lproj/Main.storyboard
+++ b/LocationTracking/LocationTracking/Base.lproj/Main.storyboard
@@ -789,10 +789,10 @@
                                 </constraints>
                             </view>
                             <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="W9Q-Ev-QUF">
-                                <rect key="frame" x="20" y="20" width="280" height="70"/>
+                                <rect key="frame" x="0.0" y="20" width="320" height="70"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="EDV-Hy-euQ">
-                                        <rect key="frame" x="245" y="8" width="35" height="35"/>
+                                        <rect key="frame" x="285" y="8" width="35" height="35"/>
                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="35" id="QgW-6W-xWt"/>
@@ -805,12 +805,13 @@
                                         </connections>
                                     </button>
                                     <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="new location" textAlignment="justified" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="gN0-hr-wzR" customClass="TextField" customModule="LocationTracking" customModuleProvider="target">
-                                        <rect key="frame" x="26" y="8" width="214" height="35"/>
+                                        <rect key="frame" x="40" y="8" width="240" height="35"/>
                                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="0.69999999999999996" colorSpace="calibratedRGB"/>
                                         <color key="tintColor" red="0.1960784314" green="0.64705882349999999" blue="0.85490196080000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <rect key="contentStretch" x="1" y="0.0" width="1" height="1"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="35" id="WY8-FV-urp"/>
+                                            <constraint firstAttribute="width" constant="240" id="bYl-5Y-Yw9"/>
                                         </constraints>
                                         <fontDescription key="fontDescription" type="system" pointSize="13"/>
                                         <textInputTraits key="textInputTraits"/>
@@ -830,7 +831,7 @@
                                         </connections>
                                     </button>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Lat:" textAlignment="justified" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0C5-Nc-5Yx">
-                                        <rect key="frame" x="26" y="48" width="110" height="14.5"/>
+                                        <rect key="frame" x="40" y="48" width="110" height="14.5"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="110" id="9de-8c-JUx"/>
                                         </constraints>
@@ -839,7 +840,7 @@
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Long:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5HG-xz-d5B">
-                                        <rect key="frame" x="141" y="48" width="99" height="14.5"/>
+                                        <rect key="frame" x="155" y="48" width="31.5" height="14.5"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
@@ -847,17 +848,15 @@
                                 </subviews>
                                 <color key="backgroundColor" red="1" green="1" blue="1" alpha="0.90000000000000002" colorSpace="calibratedRGB"/>
                                 <constraints>
+                                    <constraint firstItem="gN0-hr-wzR" firstAttribute="centerX" secondItem="W9Q-Ev-QUF" secondAttribute="centerX" id="9AS-SI-AhE"/>
                                     <constraint firstAttribute="trailing" secondItem="EDV-Hy-euQ" secondAttribute="trailing" id="9Mk-fw-39D"/>
                                     <constraint firstItem="EDV-Hy-euQ" firstAttribute="leading" secondItem="gN0-hr-wzR" secondAttribute="trailing" constant="5" id="GwF-Vl-VX5"/>
                                     <constraint firstItem="5HG-xz-d5B" firstAttribute="leading" secondItem="0C5-Nc-5Yx" secondAttribute="trailing" constant="5" id="IOF-nZ-UX4"/>
-                                    <constraint firstAttribute="width" constant="280" id="NQk-7O-A37"/>
-                                    <constraint firstItem="gN0-hr-wzR" firstAttribute="leading" secondItem="W9Q-Ev-QUF" secondAttribute="leading" constant="26" id="PgT-T8-JQC"/>
                                     <constraint firstItem="0C5-Nc-5Yx" firstAttribute="leading" secondItem="gN0-hr-wzR" secondAttribute="leading" id="Vlz-Qy-GZI"/>
                                     <constraint firstAttribute="height" constant="70" id="Y5a-ba-FR2"/>
                                     <constraint firstItem="gN0-hr-wzR" firstAttribute="top" secondItem="W9Q-Ev-QUF" secondAttribute="top" constant="8" id="ZhI-H4-Clh"/>
                                     <constraint firstItem="LVc-um-tRL" firstAttribute="top" secondItem="gN0-hr-wzR" secondAttribute="bottom" id="eRz-Pg-aEs"/>
                                     <constraint firstItem="LVc-um-tRL" firstAttribute="leading" secondItem="W9Q-Ev-QUF" secondAttribute="leading" id="jqw-7N-A7t"/>
-                                    <constraint firstItem="5HG-xz-d5B" firstAttribute="trailing" secondItem="gN0-hr-wzR" secondAttribute="trailing" id="okb-zp-8bC"/>
                                     <constraint firstItem="5HG-xz-d5B" firstAttribute="top" secondItem="gN0-hr-wzR" secondAttribute="bottom" constant="5" id="pco-zL-AhQ"/>
                                     <constraint firstItem="EDV-Hy-euQ" firstAttribute="centerY" secondItem="gN0-hr-wzR" secondAttribute="centerY" id="yBa-hf-Eqf"/>
                                     <constraint firstItem="0C5-Nc-5Yx" firstAttribute="top" secondItem="gN0-hr-wzR" secondAttribute="bottom" constant="5" id="yzM-Zm-QhZ"/>
@@ -870,9 +869,11 @@
                             <constraint firstItem="I2Y-ue-wS3" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="Hf1-aW-MKP"/>
                             <constraint firstItem="EN0-G1-lHx" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" constant="10" id="Qy5-hM-fbh"/>
                             <constraint firstAttribute="trailing" secondItem="7J1-bL-8zx" secondAttribute="trailing" id="gOS-pd-Jlb"/>
+                            <constraint firstItem="W9Q-Ev-QUF" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="h9w-JY-8BU"/>
                             <constraint firstItem="W9Q-Ev-QUF" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="nbU-wQ-KQn"/>
                             <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="7J1-bL-8zx" secondAttribute="bottom" id="oTO-LX-its"/>
                             <constraint firstAttribute="trailing" secondItem="I2Y-ue-wS3" secondAttribute="trailing" id="uF8-BK-5Tx"/>
+                            <constraint firstAttribute="trailing" secondItem="W9Q-Ev-QUF" secondAttribute="trailing" id="vs6-dq-KyR"/>
                             <constraint firstItem="EN0-G1-lHx" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="15" id="zyL-xI-wdq"/>
                         </constraints>
                     </view>
@@ -906,15 +907,16 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="hMJ-yL-Pkl">
-                                <rect key="frame" x="30" y="30" width="260" height="31"/>
+                                <rect key="frame" x="27" y="30" width="266" height="36"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="30" id="aQ2-Es-xkQ"/>
-                                    <constraint firstAttribute="width" constant="260" id="m17-bf-jmT"/>
+                                    <constraint firstAttribute="height" constant="35" id="aQ2-Es-xkQ"/>
+                                    <constraint firstAttribute="width" constant="266" id="m17-bf-jmT"/>
                                 </constraints>
                                 <segments>
                                     <segment title="Contacts"/>
                                     <segment title="Requests"/>
                                     <segment title="Groups"/>
+                                    <segment title="Locations"/>
                                 </segments>
                                 <color key="tintColor" red="0.19539620539999999" green="0.64670758930000005" blue="0.85485491069999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <connections>
@@ -922,7 +924,7 @@
                                 </connections>
                             </segmentedControl>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="86" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="rii-NB-TQb">
-                                <rect key="frame" x="0.0" y="80" width="320" height="453"/>
+                                <rect key="frame" x="0.0" y="85" width="320" height="448"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <inset key="separatorInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 <prototypes>
