--- a/LocationTracking/LocationTracking/Base.lproj/Main.storyboard
+++ b/LocationTracking/LocationTracking/Base.lproj/Main.storyboard
@@ -5,7 +5,7 @@
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13173"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13174"/>
         <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -1013,35 +1013,61 @@
                                     <outlet property="delegate" destination="dlV-Ev-EFu" id="iII-FX-iMd"/>
                                 </connections>
                             </tableView>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="bottom" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="VQA-gv-qIs">
-                                <rect key="frame" x="20" y="533" width="280" height="35"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="VQA-gv-qIs">
+                                <rect key="frame" x="142.5" y="533" width="35" height="35"/>
+                                <color key="backgroundColor" red="0.1450980392" green="0.59607843140000005" blue="0.66274509800000003" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="35" id="kBR-KW-BmP"/>
+                                    <constraint firstAttribute="width" constant="35" id="ogH-3z-SDh"/>
                                 </constraints>
-                                <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                 <state key="normal" title="About">
-                                    <color key="titleColor" red="0.1960784314" green="0.64705882349999999" blue="0.85490196080000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                    <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 </state>
                                 <connections>
                                     <segue destination="JDH-QB-9yJ" kind="presentation" id="zHF-FE-du6"/>
                                 </connections>
                             </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="yXq-ya-09Y">
+                                <rect key="frame" x="87.5" y="533" width="35" height="35"/>
+                                <state key="normal" title="Button"/>
+                                <connections>
+                                    <action selector="tappedShareOnTwitter:" destination="dlV-Ev-EFu" eventType="touchUpInside" id="Iyl-Na-uqi"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="6a1-bW-V5Z">
+                                <rect key="frame" x="197.5" y="533" width="35" height="35"/>
+                                <state key="normal" title="Button"/>
+                                <connections>
+                                    <action selector="tappedShareOnFacebook:" destination="dlV-Ev-EFu" eventType="touchUpInside" id="Hxl-CH-9HF"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstAttribute="trailing" secondItem="VQA-gv-qIs" secondAttribute="trailing" constant="20" id="D38-XB-7v9"/>
+                            <constraint firstItem="VQA-gv-qIs" firstAttribute="centerX" secondItem="Ogu-Gw-5OL" secondAttribute="centerX" id="4MR-Fo-8OH"/>
+                            <constraint firstItem="6a1-bW-V5Z" firstAttribute="width" secondItem="VQA-gv-qIs" secondAttribute="width" id="68t-sZ-FTv"/>
+                            <constraint firstItem="VQA-gv-qIs" firstAttribute="leading" secondItem="yXq-ya-09Y" secondAttribute="trailing" constant="20" id="7uI-JV-xWx"/>
+                            <constraint firstItem="VQA-gv-qIs" firstAttribute="top" secondItem="rii-NB-TQb" secondAttribute="bottom" id="DaG-6z-KZ5"/>
                             <constraint firstAttribute="trailing" secondItem="rii-NB-TQb" secondAttribute="trailing" id="IFp-79-0hA"/>
+                            <constraint firstItem="VQA-gv-qIs" firstAttribute="bottom" secondItem="yXq-ya-09Y" secondAttribute="bottom" id="NN0-X5-h1E"/>
                             <constraint firstItem="hMJ-yL-Pkl" firstAttribute="centerX" secondItem="Ogu-Gw-5OL" secondAttribute="centerX" id="O34-0u-mhS"/>
-                            <constraint firstAttribute="bottom" secondItem="VQA-gv-qIs" secondAttribute="bottom" id="SJD-z5-VRr"/>
-                            <constraint firstItem="VQA-gv-qIs" firstAttribute="top" secondItem="rii-NB-TQb" secondAttribute="bottom" id="TVO-Pc-t3g"/>
-                            <constraint firstItem="VQA-gv-qIs" firstAttribute="leading" secondItem="Ogu-Gw-5OL" secondAttribute="leading" constant="20" id="a8p-z6-Rrv"/>
+                            <constraint firstItem="zI8-hs-3v7" firstAttribute="top" secondItem="VQA-gv-qIs" secondAttribute="bottom" id="TV0-VB-157"/>
+                            <constraint firstItem="6a1-bW-V5Z" firstAttribute="bottom" secondItem="VQA-gv-qIs" secondAttribute="bottom" id="X8z-73-KyS"/>
+                            <constraint firstItem="VQA-gv-qIs" firstAttribute="width" secondItem="yXq-ya-09Y" secondAttribute="width" id="aUk-3H-ua0"/>
                             <constraint firstItem="hMJ-yL-Pkl" firstAttribute="top" secondItem="RfQ-c4-RGg" secondAttribute="bottom" constant="10" id="bk9-o5-vzA"/>
+                            <constraint firstItem="6a1-bW-V5Z" firstAttribute="height" secondItem="VQA-gv-qIs" secondAttribute="height" id="czv-20-GSz"/>
                             <constraint firstItem="rii-NB-TQb" firstAttribute="leading" secondItem="Ogu-Gw-5OL" secondAttribute="leading" id="jRB-be-B6N"/>
+                            <constraint firstItem="VQA-gv-qIs" firstAttribute="height" secondItem="yXq-ya-09Y" secondAttribute="height" id="lQw-e3-SIl"/>
+                            <constraint firstItem="6a1-bW-V5Z" firstAttribute="leading" secondItem="VQA-gv-qIs" secondAttribute="trailing" constant="20" id="wqa-If-MRm"/>
                             <constraint firstItem="rii-NB-TQb" firstAttribute="top" secondItem="hMJ-yL-Pkl" secondAttribute="bottom" constant="20" id="xhO-bc-Aac"/>
                         </constraints>
                     </view>
                     <connections>
+                        <outlet property="aboutButton" destination="VQA-gv-qIs" id="ra3-Aw-GcO"/>
                         <outlet property="segmented" destination="hMJ-yL-Pkl" id="xEW-dY-szn"/>
+                        <outlet property="shareFacebookButton" destination="6a1-bW-V5Z" id="2oa-v4-dUE"/>
+                        <outlet property="shareTwitterButton" destination="yXq-ya-09Y" id="bS5-Pu-86J"/>
                         <outlet property="tableView" destination="rii-NB-TQb" id="KGW-Aq-GRh"/>
                     </connections>
                 </viewController>
