--- a/LocationTracking/LocationTracking/Base.lproj/Main.storyboard
+++ b/LocationTracking/LocationTracking/Base.lproj/Main.storyboard
@@ -927,6 +927,29 @@
                                 <rect key="frame" x="0.0" y="85" width="320" height="448"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <inset key="separatorInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                <view key="tableFooterView" contentMode="scaleToFill" id="mox-DE-eef">
+                                    <rect key="frame" x="0.0" y="113" width="320" height="44"/>
+                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                    <subviews>
+                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="1dp-4g-9vm">
+                                            <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                            <state key="normal" title="Delete">
+                                                <color key="titleColor" red="0.82745098039999998" green="0.050980392159999999" blue="0.050980392159999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                            </state>
+                                            <connections>
+                                                <action selector="tappedDelete:" destination="dlV-Ev-EFu" eventType="touchUpInside" id="F4w-Af-VsG"/>
+                                            </connections>
+                                        </button>
+                                    </subviews>
+                                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                    <constraints>
+                                        <constraint firstAttribute="trailing" secondItem="1dp-4g-9vm" secondAttribute="trailing" id="6xu-p6-KYx"/>
+                                        <constraint firstItem="1dp-4g-9vm" firstAttribute="leading" secondItem="mox-DE-eef" secondAttribute="leading" id="K8K-Gb-H3M"/>
+                                        <constraint firstItem="1dp-4g-9vm" firstAttribute="top" secondItem="mox-DE-eef" secondAttribute="top" id="clb-i9-cXl"/>
+                                        <constraint firstAttribute="bottom" secondItem="1dp-4g-9vm" secondAttribute="bottom" id="tOF-0O-3k6"/>
+                                    </constraints>
+                                </view>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" restorationIdentifier="ContactTableViewCell" selectionStyle="none" indentationWidth="10" reuseIdentifier="ContactTableViewCell" rowHeight="85" id="5TQ-gH-dvK" customClass="ContactTableViewCell" customModule="LocationTracking" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="28" width="320" height="85"/>
@@ -1065,6 +1088,7 @@
                     </view>
                     <connections>
                         <outlet property="aboutButton" destination="VQA-gv-qIs" id="ra3-Aw-GcO"/>
+                        <outlet property="deleteButton" destination="1dp-4g-9vm" id="baG-tf-1VA"/>
                         <outlet property="segmented" destination="hMJ-yL-Pkl" id="xEW-dY-szn"/>
                         <outlet property="shareFacebookButton" destination="6a1-bW-V5Z" id="2oa-v4-dUE"/>
                         <outlet property="shareTwitterButton" destination="yXq-ya-09Y" id="bS5-Pu-86J"/>
